// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@vgerbot/channel-transformer should be able to detect the module alias 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
var RemoteAPIMembers_1 = [\\"method\\"];
const channel_1 = require(\\"@vgerbot/channel\\");
const channel = new channel_1.Channel();
channel.get_class(\\"RemoteAPI\\", RemoteAPIMembers_1);
"
`;

exports[`@vgerbot/channel-transformer should be able to exclude methods calling that has more than 2 arguments 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
const channel_1 = require(\\"@vgerbot/channel\\");
const channel = new channel_1.Channel('', new channel_1.WebWorkerScopeCommunicator());
channel.get_class('RemoteAPI1', class {
    method() { }
});
"
`;

exports[`@vgerbot/channel-transformer should be able to exclude methods without type arguments 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
const channel_1 = require(\\"@vgerbot/channel\\");
const channel = new channel_1.Channel('', new channel_1.WebWorkerScopeCommunicator());
channel.get_class('RemoteAPI', class RemoteAPI {
    method() { }
});
"
`;

exports[`@vgerbot/channel-transformer should be able to reference the class 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
const channel_1 = require(\\"@vgerbot/channel\\");
const channel = new channel_1.Channel('', new channel_1.WebWorkerScopeCommunicator());
channel.get_class(\\"RemoteAPI\\", RemoteAPI);
class RemoteAPI {
    method() { }
}
"
`;

exports[`@vgerbot/channel-transformer should reuse converted variables 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
var RemoteAPIMembers_1 = [\\"method\\", \\"method2\\"], RemoteAPIMembers_2 = [\\"method\\"], InnerRemoteAPIMembers_1 = [\\"method\\"];
const channel_1 = require(\\"@vgerbot/channel\\");
const channel = new channel_1.Channel('', new channel_1.WebWorkerScopeCommunicator());
channel.get_class(\\"RemoteAPI\\", RemoteAPIMembers_1);
channel.get_class(\\"RemoteAPI\\", RemoteAPIMembers_1);
class RemoteAPI {
    method() { }
    ;
}
function scope_a() {
    channel.get_class(\\"RemoteAPI\\", RemoteAPIMembers_2);
    channel.get_class(\\"RemoteAPI\\", RemoteAPIMembers_2);
    function scope_inner_a() {
        channel.get_class(\\"InnerRemoteAPI\\", InnerRemoteAPIMembers_1);
        channel.get_class(\\"RemoteAPI\\", RemoteAPIMembers_2);
    }
}
"
`;

exports[`@vgerbot/channel-transformer should run normally with the transformer 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
exports.x = void 0;
const channel_1 = require(\\"@vgerbot/channel\\");
exports.x = 'string';
console.info(channel_1.Channel);
"
`;

exports[`@vgerbot/channel-transformer should throw when passing a anonymous arrow function to Channel.def_method 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
const channel_1 = require(\\"@vgerbot/channel\\");
let channelBuilder = (0, channel_1.channel)(\\"channel-id\\");
let generator = channelBuilder.connectToMainThread();
const c = generator.create();
c.def_method(() => { });
"
`;

exports[`@vgerbot/channel-transformer should throw when passing a anonymous function to Channel.def_method 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
const channel_1 = require(\\"@vgerbot/channel\\");
let channelBuilder = (0, channel_1.channel)(\\"channel-id\\");
let generator = channelBuilder.connectToMainThread();
const c = generator.create();
c.def_method(function () { });
"
`;

exports[`@vgerbot/channel-transformer should transform "fixtures/abstract class.ts" correctly 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
var RemoteAPIMembers_1 = [\\"method\\", \\"method2\\"];
const channel_1 = require(\\"@vgerbot/channel\\");
const channel = new channel_1.Channel('', new channel_1.WebWorkerScopeCommunicator());
channel.get_class(\\"RemoteAPI\\", RemoteAPIMembers_1);
class RemoteAPI {
    method() { }
}
"
`;

exports[`@vgerbot/channel-transformer should transform "fixtures/autofill parameters.ts" correctly 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
var RemoteAPIMembers_1 = [\\"method\\"];
const channel_1 = require(\\"@vgerbot/channel\\");
const channel = new channel_1.Channel('', new channel_1.WebWorkerScopeCommunicator());
channel.get_class(\\"RemoteAPI\\", RemoteAPIMembers_1);
"
`;

exports[`@vgerbot/channel-transformer should transform "fixtures/automatic method id.ts" correctly 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
const channel_1 = require(\\"@vgerbot/channel\\");
let channelBuilder = (0, channel_1.channel)(\\"channel-id\\");
let generator = channelBuilder.connectToMainThread();
const c = generator.create();
c.def_method(\\"hello\\", function hello() { });
const a = () => { };
c.def_method(a);
const b = function () { };
c.def_method(b);
"
`;

exports[`@vgerbot/channel-transformer should transform "fixtures/channel builder.ts" correctly 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
var RemoteAPIMembers_1 = [\\"method\\"];
const channel_1 = require(\\"@vgerbot/channel\\");
let channelBuilder = (0, channel_1.channel)(\\"channel-id\\");
let generator = channelBuilder.connectToMainThread();
const c = generator.create();
c.get_class(\\"RemoteAPI\\", RemoteAPIMembers_1);
"
`;

exports[`@vgerbot/channel-transformer should transform "fixtures/def class.ts" correctly 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
const channel_1 = require(\\"@vgerbot/channel\\");
let channelBuilder = (0, channel_1.channel)(\\"channel-id\\");
let generator = channelBuilder.connectToMainThread();
const c = generator.create();
class AA {
}
class RemoteAPIImpl extends AA {
    method() { }
}
c.def_class(\\"RemoteAPIImpl\\", RemoteAPIImpl); // same as
c.def_class('RemoteAPIImpl', RemoteAPIImpl);
"
`;

exports[`@vgerbot/channel-transformer should transform "fixtures/interface parameter.ts" correctly 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
var RemoteAPIMembers_1 = [\\"method\\"];
const channel_1 = require(\\"@vgerbot/channel\\");
const channel = new channel_1.Channel('', new channel_1.WebWorkerScopeCommunicator());
channel.get_class(\\"RemoteAPI\\", RemoteAPIMembers_1);
"
`;

exports[`@vgerbot/channel-transformer should transform "fixtures/intersection type.ts" correctly 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
var RemoteAPIMembers_1 = [\\"method1\\", \\"method2\\", \\"method3\\"];
const channel_1 = require(\\"@vgerbot/channel\\");
const channel = new channel_1.Channel('', new channel_1.WebWorkerScopeCommunicator());
channel.get_class(\\"RemoteAPI\\", RemoteAPIMembers_1);
"
`;

exports[`@vgerbot/channel-transformer should transform "fixtures/type statement.ts" correctly 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
var RemoteAPIMembers_1 = [\\"method\\"];
const channel_1 = require(\\"@vgerbot/channel\\");
const channel = new channel_1.Channel('', new channel_1.WebWorkerScopeCommunicator());
channel.get_class(\\"RemoteAPI\\", RemoteAPIMembers_1);
"
`;

exports[`@vgerbot/channel-transformer should transform "fixtures/union type.ts" correctly 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
var RemoteAPIMembers_1 = [\\"method1\\", \\"method1x\\", \\"method2\\", \\"method3\\"];
const channel_1 = require(\\"@vgerbot/channel\\");
const channel = new channel_1.Channel('', new channel_1.WebWorkerScopeCommunicator());
channel.get_class(\\"RemoteAPI\\", RemoteAPIMembers_1);
"
`;

exports[`@vgerbot/channel-transformer should use the name of the first parent class as the class id 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
const channel_1 = require(\\"@vgerbot/channel\\");
let channelBuilder = (0, channel_1.channel)(\\"channel-id\\");
let generator = channelBuilder.connectToMainThread();
const c = generator.create();
class AA {
}
class RemoteAPIImpl extends AA {
    method() { }
}
c.def_class(\\"AA\\", RemoteAPIImpl);
// ↑ same as ↓
c.def_class('AA', RemoteAPIImpl);
"
`;

exports[`@vgerbot/channel-transformer should use the name of the first parent interface as the class id 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
const channel_1 = require(\\"@vgerbot/channel\\");
let channelBuilder = (0, channel_1.channel)(\\"channel-id\\");
let generator = channelBuilder.connectToMainThread();
const c = generator.create();
class AA {
}
class RemoteAPIImpl extends AA {
    method() { }
}
c.def_class(\\"RemoteAPI\\", RemoteAPIImpl);
// ↑ same as ↓
c.def_class('RemoteAPI', RemoteAPIImpl);
"
`;
